--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: linear-gradient(0 deg, 
+  rgba(195, 126, 34,1) 0%,
+   rgba(234, 253, 45, 0.5) 100%
+  );
+}
+
+.App{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.player{
+  display: block;
+  background-image: linear-gradient(to bottom, violet, indigo);
+  margin: opx auto;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: inset -6px -6px 12px rgba(0,0,0,0.8),
+  inset 6px 6px 12px rgba(255,255,255, 0.4) ;
+}
+.player > h4{
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
+}
+.player >p{
+  color: #aaa;
+  font-size: 14px;
+  text-align: center;
+  font-weight: 600;
+}
+
+
+.player > p span{
+  font-weight: 400;
+  width: fit-content;
+}
+
+.details .details_img{
+  position: relative;
+  width: fit-content;
+  margin: 0 auto;
+
+}
+.details > .details_img img{
+display: block;
+margin: 50px auto;
+
+width: 100%;
+max-width: 100%;
+border-radius: 10%;
+box-shadow: 6px 6px 12px rgba(0,0,0,0.8), -6px -6px 12px rgba((255, 255, 255, 0.4));
+}
+
+.details .details_title{
+  color: #eee;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.details .details_artist{
+  color: #aaa;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.control{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.control .control_playbtn{
+  display: flex;
+  margin: 0 30px;
+  padding: 20px;
+  border-radius: 50%;
+
+  border: none;
+  background-color: indigo;
+  color: white;
+
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.control .control_skipBtn{
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: black;
+  font-size: 18px;
+}
+
+audio{
+  opacity: 0.4;
+  outline-width: 0;
+  margin-bottom: 5px;
+  margin-top: -20px;
+}
+
+audio::-webkit-media-controls-play-button{
+  display: none;
 }
